# external-api-finisher

./: .env.example  .gitignore  API_DOCUMENTATION_COMPREHENSIVE.md  ARCHITECTURE_HIERARCHY.md  COMPREHENSIVE_API_AUDIT.md  COMPREHENSIVE_RENAMING_PLAN.md  COMPREHENSIVE_VERIFICATION_REPORT.md  Dockerfile  EXHAUSTIVE_LEGACY_TERMINOLOGY_AUDIT.md  FINAL_PRE_RELEASE_AUDIT.md  FINAL_RELEASE_REPORT.md  MIGRATION_GUIDE.md  Makefile  PRE_RELEASE_AUDIT_REPORT.md  PRE_RELEASE_CHECK.md  README.md  apply_migrations.sh  openapi.json  pyproject.toml  pytest.ini
alembic/: env.py  schema_diagram.md
alembic/versions/: 001_initial_schema.py  0c855e0b81e0_initial_migration_teams_api_keys_usage_.py  121e13619297_simplify_schema_platform_names_one_key_.py  6418b4e05600_merge_heads_before_teams_to_channels_.py  6f4dbeea5805_update_access_levels_remove_team_lead_.py  850df83abd23_rename_team_name_to_display_name.py  a1b2c3d4e5f6_add_platform_config_columns.py
alembic/versions_backup/: 71521c6321dc_add_webhook_fields_to_teams.py  7f532f75e129_refactor_teams_to_channels_architecture.py  db8a923de76e_add_messages_table_for_conversation_.py  f709960167e7_merge_platform_config_with_existing_.py
app/: __init__.py  main.py
app/api/: admin_routes.py  dependencies.py  routes.py
app/core/: config.py  constants.py  database_init.py  name_mapping.py
app/models/: database.py  schemas.py  session.py
app/services/: ai_client.py  api_key_manager.py  channel_manager.py  command_processor.py  message_processor.py  platform_manager.py  session_manager.py  usage_tracker.py
app/utils/: logger.py
archive/: ABSOLUTE_FINAL_VERIFICATION.md  README.md  ULTIMATE_FINAL_VERIFICATION.md
docs/audits/: FINAL_PRE_RELEASE_AUDIT.md  ULTIMATE_PRE_RELEASE_AUDIT.md
manifests/dev/: deployment.yaml  ingress.yaml  service.yaml
manifests/prod/: deployment.yaml  ingress.yaml  service.yaml
manifests/stage/: deployment.yaml  ingress.yaml  service.yaml
scripts/: demo_logging.py  demo_timestamp_modes.py  manage_api_keys.py  test_ai_connectivity.py
telegram_bot/: bot.py  client.py  handlers.py
tests/: conftest.py  test_ai_client.py  test_ai_service.py  test_api.py  test_api_key_manager.py  test_channel_manager.py  test_command_processor.py  test_comprehensive.py  test_config.py  test_conftest_fixtures.py  test_database_models.py  test_dependencies.py  test_logger.py  test_message_processor.py  test_name_mapping.py  test_platform_manager.py  test_schemas.py  test_sessions.py  test_usage_tracker.py
